--- a/index.html
+++ b/index.html
@@ -54,11 +54,11 @@
                 <div class="grid-container">
                     <div class="grid-item graphic-design">
                         <h3>Graphic Design</h3>
-                        <p>Photoshop, Illustrator, Premiere, After Effects</p>
+                        <p>Photoshop, Illustrator, Premiere, After Effects,blender</p>
                     </div>
                     <div class="grid-item programming">
                         <h3>Programming</h3>
-                        <p>HTML, CSS, JavaScript</p>
+                        <p>HTML, CSS, JavaScript, C++, Python</p>
                     </div>
                     <div class="grid-item media-analytics">
                         <h3>Media Analytics</h3>
